--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,49 +1,48 @@
 .footer {
-    background-color: #d9534f;
-    color: white;
-    padding: 20px 0;
-  }
-  
-  .footer-content {
-    display: flex;
-    justify-content: space-around;
-    padding: 20px 0;
-  }
-  
-  .footer-section {
-    width: 30%;
-  }
-  
-  .footer-section h3 {
-    font-size: 18px;
-    margin-bottom: 10px;
-  }
-  
-  .footer-section p {
-    font-size: 14px;
-  }
-  
-  .footer-section ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  .footer-section ul li {
-    margin-bottom: 10px;
-  }
-  
-  .footer-section ul li a {
-    color: white;
-    text-decoration: none;
-  }
-  
-  .footer-bottom {
-    text-align: center;
-    padding: 10px 0;
-    border-top: 1px solid #fff;
-  }
-  
-  .footer-bottom p {
-    margin: 0;
-  }
-  
+  background-color: #00A9BD; /* Teal Blue */
+  color: white;
+  padding: 20px 0;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-around;
+  padding: 20px 0;
+}
+
+.footer-section {
+  width: 30%;
+}
+
+.footer-section h3 {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.footer-section p {
+  font-size: 14px;
+}
+
+.footer-section ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.footer-section ul li {
+  margin-bottom: 10px;
+}
+
+.footer-section ul li a {
+  color: white;
+  text-decoration: none;
+}
+
+.footer-bottom {
+  text-align: center;
+  padding: 10px 0;
+  border-top: 1px solid #fff;
+}
+
+.footer-bottom p {
+  margin: 0;
+}
